@@ -1,9 +1,15 @@
-2009-07-27 18:24 adburton
+2009-08-01 16:40 adburton
+
+	* src/gmameui-gamelist-view.c: Remove redundant gtk_progressbar_pulse call
+	* src/directories.c: Search for SDLMAME executable in $PATH if no
+	  executables exist
+
+2009-07-31 18:24 adburton
 
 	* gmameui.desktop.in: Updated .desktop.in file to remove deprecated items as
 	  per Freedesktop specifications
 
-2009-07-27 18:05 adburton
+2009-07-31 18:05 adburton
 
 	* data/main_gui.glade: Delete redundant main window Glade file
 	* data/: Makefile.am, filter_bar.glade: Add new Glade file to support the filter bar
